APPLICATIONS/springboot-kubernetes-elk-sidecar-container/kubernetes/springboot.yml
apiVersion: v1
kind: Service
metadata:
  name: springboot-kubernetes-elk
  namespace: default
  labels:
    app: springboot-kubernetes-elk
spec:
  selector:
    app: springboot-kubernetes-elk
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-kubernetes-elk
  namespace: default
  labels:
    app: sspringboot-kubernetes-elk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-kubernetes-elk
      tier: backend
  template:
    metadata:
      labels:
        app: springboot-kubernetes-elk
        tier: backend
    spec:
      containers:
        - name: springboot-kubernetes-elk
          image: "adarshkumarsingh83/springboot-kubernetes-elk-sidecar-container"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          env:   # Setting environmental Variables
            - name: SPRING_PROFILES_ACTIVE
              value: kubernetes
            - name: LOGSTASH_URL
              valueFrom:
                configMapKeyRef:
                  name: app-config
                  key: logstash_url
          volumeMounts:
            - name: springboot-kubernetes-elk
              mountPath: /var/logs
        - name: logstash
          image: docker.elastic.co/logstash/logstash:6.3.0
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/logstash/config
            - name: logstash-pipeline-volume
              mountPath: /usr/share/logstash/pipeline
      volumes:
        - name: springboot-kubernetes-elk
          emptyDir: {}
        - name: config-volume
          configMap:
            name: logstash-configmap
            items:
              - key: logstash.yml
                path: logstash.yml
        - name: logstash-pipeline-volume
          configMap:
            name: logstash-configmap
            items:
              - key: logstash.conf
                path: logstash.conf
